# sqs

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.serena/: project.yml
api/: Dockerfile  celery_client.py  config.py  main.py  models.py  pyproject.toml  schemas.py  sqs.py
api/app/: main.py
app/: dependencies.py  main.py  schemas.py
app/routers/: messages.py  queues.py
sqs/: Dockerfile  pyproject.toml
sqs/app/: main.py
worker/: Dockerfile  celery_app.py  main.py  models.py  pyproject.toml  tasks.py
worker/app/: celery.py  main.py  tasks.py
