[project]
name = "sqs-local"
version = "0.1.0"
description = "Local SQS service with moto"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "boto3>=1.35.86",
    "pydantic>=2.10.4",
    "moto[server,sqs]>=5.0.26",
    "celery[sqs]>=5.4.0",
]

[dependency-groups]
dev = [
    "boto3-stubs[sqs]>=1.35.86",
    "celery-types>=0.22.0",
    "mypy>=1.14.1",
    "ruff>=0.8.6",
]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = "api:worker"
