[project]
name = "api"
version = "0.1.0"
description = "API service for task submission"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "boto3>=1.35.86",
    "pydantic>=2.10.4",
]

[dependency-groups]
dev = [
    "boto3-stubs[sqs]>=1.35.86",
    "mypy>=1.14.1",
    "ruff>=0.8.6",
]
